# sdholakia_2024a

./: .gitignore  .pre-commit-config.yaml  README.md  api_example.ipynb  pyproject.toml
.github/workflows/: basic_tests.yml
python/jaxodi/: api.py  doppler_forward.py  doppler_inference.py  doppler_surface.py  fig7_functions.py  figure_7.py  jaxodi_spot_infer_y.py  rotation.py  test_fig7_functions.py  utils.py
tests/: api_test.py  doppler_forward_test.py  doppler_surface_test.py  forward_core_test.py  map_solve_S_input.npy  map_solve_cho_C_input.npy  map_solve_flux_input.npy  map_solve_invL_input.npy  map_solve_mu_input.npy  spot_y.npy  test_doppler_inference.py
tutorial/: api_example.ipynb
tutorial/.ipynb_checkpoints/: api_example-checkpoint.ipynb
