[tool.poetry]
name = "jaxodi"
version = "0.0.0-dev"
description = "Doppler Imaging in JAX"
authors = []
license = "MIT"
readme = "README.md"
packages = [{ include = "jaxodi", from = "python" }]
homepage = "https://github.com/ADACS-Australia/sdholakia_2024a"


[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.4"
jaxlib = "^0.4"
jaxoplanet = "*"

pre-commit = { version = "^3.0.4", optional = true }
pytest = { version = "^7.0", optional = true }
pytest-cov = { version = "^4.1.0", optional = true }
pytest-mock = { version = "^3.11.1", optional = true }
pytest-xdist = { version = "*", optional = true }
black = { version = "^22.10.0", optional = true }
ruff = { version = "^0.0.243", optional = true}
sympy = { version = "^1.11", optional = true }

exoplanet-core = {version = "*", optional = true }
tqdm = { version = "*", optional = true }        # Required by starry
numpy = { version = "<1.22", optional = true } 
xarray = { version = "<2023.10.0", optional = true }
starry = { version = "^1.2.0", optional = true }

matplotlib = { version = "^3.7.1", optional = true }
arviz = { version = "^0.15.1", optional = true }
corner = { version = "^2.2.2", optional = true }
numpyro = { version = "^0.11.0", optional = true }
numpyro-ext = { version = "^0.0.1", optional = true }
jaxopt = { version = "^0.6", optional = true }
myst-nb = { version = "^0.17", optional = true }
sphinx-book-theme = { version = "^1.0", optional = true }
sphinx-design = { version = "^0.3", optional = true }

[tool.poetry.extras]
dev = [
    "pre-commit", 
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "black",
    "ruff",
    "sympy",
]

comparison = [
    "exoplanet-core",
    "tqdm",
    "numpy",
    "xarray",
    "starry",
]

docs = [
    "matplotlib",
    "arviz",
    "corner",
    "numpyro",
    "numpyro-ext",
    "jaxopt",
    "myst-nb",
    "sphinx-book-theme",
    "sphinx-design",
]

[tool.pytest.ini_options]
addopts = "--cov"
pythonpath = "./python" # relative to root directory

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["F", "I", "E", "W", "YTT", "B", "Q", "PLE", "PLR", "PLW", "UP"]
ignore = [
    "B023",    # Allow using global variables in lambdas
    "E741",    # Allow ambiguous variable names (e.g. "l" in starry)
    "PLR0912", # Allow many branches
    "PLR0913", # Allow many arguments in function call
    "PLR0915", # Allow many statements
    "PLR2004", # Allow magic numbers in comparisons
    "F401", # ignore at development stage
    "I001", # ignore at development stage
]
# exclude = []

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"